2006-04-07  Derek Price  <derek@ximbiot.com>

	* client.c (send_a_repository): Add assertion.
	(Thanks to an incorrect report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

2006-04-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c (last_component, expand_wild), rcs.c (RCS_deltas,
	RCS_rewrite), server.c (server_checked_in): Add assertions.
	(Thanks to an incorrect report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

2006-03-31  Mark D. Baushke  <mdb@gnu.org>

	* cvsrc.c (read_cvsrc): Deal with \r\n (DOS) line endings in
	.cvsrc files.

2006-03-07  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Search the Attic when -F is used.
	* sanity.sh (tests): Run death-rtag.
	(death-rtag): Expect success.

	* sanity.sh (death-rtag): Add failing force tag move test.

2006-03-06  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Always search in the attic when -r is used.

	* sanity.sh (death-rtag): New test.
	(Original report from C. Michael Pilato <cmpilato@collab.net>.)

2006-03-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set MALLOC_CHECK_ in hopes of exposing common memory
	errors when CVS is linked with glibc 2.x.

2006-02-27  Derek Price  <derek@ximbiot.com>

	* lock.c (internal_lock): Back out previous change, we don't change
	user visible output on stable unless absolutely necessary.

	* lock.c (internal_lock): Improve error message.

2006-02-26  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Remove unneeded code.
	* sanity.sh (toplevel-12): Compensate by failing to expect a redundant
	error message.

2006-02-24  Mark D. Baushke  <mdb@gnu.org>

	* client.c (gzip_level): Move to...
	* main.c (gzip_level): ...here.
	(main): Revert previous change in '-z' argument processing and
	remove CLIENT_SUPPORT ifdef/endif.
	* sanity.h (crerepos-6a): Deal with --disable-client output.

	* main.c (main): Validate the gzip compression level for
	--disable-client configurations.
